--- a/app/src/main/res/layout/activity_traslate_voice.xml
+++ b/app/src/main/res/layout/activity_traslate_voice.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/traslatevoice"
     tools:context=".TraslateVoiceActivity">
 
     <include
         android:id="@+id/include"
         layout="@layout/action_bar_toolbar"
         app:layout_constraintBottom_toTopOf="@+id/view"
-        app:layout_constraintEnd_toEndOf="@+id/editText2"
+        app:layout_constraintEnd_toEndOf="@+id/scrollvoice"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editText2" />
+        app:layout_constraintStart_toStartOf="@+id/scrollvoice" />
 
     <View
         android:id="@+id/view"
@@ -47,7 +48,7 @@
 
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editTextvoice"
         android:layout_width="400dp"
         android:layout_height="90dp"
         android:background="@drawable/borderedondo"
@@ -60,27 +61,8 @@
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintStart_toStartOf="@+id/view"
         app:layout_constraintTop_toBottomOf="@+id/view" />
-
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="400dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/borderedondo"
-        android:fontFamily="@font/codec_cold_bold_trial"
-        android:hint="Audio traducido."
-        android:enabled="false"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:textColor="@color/textoVoz"
-        android:textColorHint="#BAB9B9"
-        app:layout_constraintEnd_toEndOf="@+id/editText"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editText"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
-
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonvoice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -91,11 +73,34 @@
         android:text="Presiona para grabar"
         android:drawableLeft="@drawable/microphonewhite"
         android:textColor="@color/textoVoz"
-        app:layout_constraintEnd_toEndOf="@+id/editText"
+        app:layout_constraintEnd_toEndOf="@+id/editTextvoice"
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextvoice" />
+    <ScrollView
+        android:id="@+id/scrollvoice"
+        android:layout_width="383dp"
+        android:layout_height="312dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/borderedondo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonvoice"
+        app:layout_constraintVertical_bias="0.0">
 
+        <GridLayout
+            android:id="@+id/contenedorvoice"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alignmentMode="alignBounds"
+            android:columnCount="7"
+            android:rowCount="8"
+            >
+
+        </GridLayout>
+
+    </ScrollView>
 
 
 
