--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -11,7 +11,7 @@
     <color name="color_wave">#4361ee</color>
     <color name="color_fondo">#fca311</color>
     <color name="color_texto">#4361ee</color>
-    <color name="color_title">#e5e5e5</color>
+    <color name="color_title">#FFF</color>
     <color name="color_icon">#4361ee</color>
     <color name="color_toolbar">#4361ee</color>
     <color name="color_principal">#4361ee</color>
