--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="color_wave">#14213d</color>
     <color name="color_fondo">#fca311</color>
     <color name="color_texto">#14213d</color>
-    <color name="color_title">#e5e5e5</color>
+    <color name="color_title">#FFF</color>
     <color name="color_icon">#14213d</color>
     <color name="color_toolbar">#14213d</color>
     <color name="color_principal">#14213d</color>
