add numbers and solutions errors

--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -58,7 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
-        android:fontFamily="@font/codec_cold_bold_trial"
+        android:fontFamily="@font/opensans_medium"
         android:text="Desarrollada con ayuda de:"
         android:textColor="@color/color_principal"
         android:textSize="20dp"
@@ -84,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
-        android:fontFamily="@font/codec_cold_bold_trial"
+        android:fontFamily="@font/opensans_medium"
         android:text="Programadores:"
         android:textColor="@color/color_principal"
         android:textSize="20dp"
@@ -125,7 +125,7 @@
         android:layout_marginTop="220dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/modernsans_light"
-        android:text="Hecho con ❤️para todos."
+        android:text="Hecho con❤para todos."
         android:textColor="@color/color_principal"
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
