--- a/app/src/main/res/layout/activity_traslate_write.xml
+++ b/app/src/main/res/layout/activity_traslate_write.xml
@@ -48,7 +48,7 @@
         android:layout_width="400dp"
         android:layout_height="90dp"
         android:background="@drawable/borderedondo"
-        android:fontFamily="@font/codec_cold_bold_trial"
+        android:fontFamily="@font/opensans_medium"
         android:hint="Ingresa tu texto para traducir a lenguaje de señas Peruano."
         android:digits="@string/caracteresaceptables"
         android:paddingLeft="10dp"
@@ -66,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:background="@drawable/borderedondo"
-        android:fontFamily="@font/codec_cold_bold_trial"
+        android:fontFamily="@font/oldsansblack"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:text="Traducir texto"
