--- a/app/src/main/res/layout/activity_sign_language.xml
+++ b/app/src/main/res/layout/activity_sign_language.xml
@@ -6,19 +6,18 @@
     android:layout_height="match_parent"
     android:id="@+id/noOyente"
     tools:context=".SignLanguageActivity">
-    <include
-        android:id="@+id/include"
-        layout="@layout/action_bar_toolbar" />
+<!--    <include-->
+<!--        android:id="@+id/include"-->
+<!--        layout="@layout/action_bar_toolbar" />-->
 
     <View
         android:id="@+id/view2"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginTop="56dp"
         android:background="@drawable/ic_wave"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/include"></View>
+        app:layout_constraintTop_toTopOf="parent"></View>
 
 
     <TextView
@@ -26,13 +25,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="💫Traducir con teclado💫"
-        android:textSize="20sp"
-        android:textColor="@color/color_title"
         android:fontFamily="@font/oldsansblack"
+        android:text="💫Traducir con teclado💫"
+        android:textColor="@color/color_title"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
@@ -47,28 +46,29 @@
         android:id="@+id/scrollLS"
         android:layout_width="380dp"
         android:layout_height="312dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/borderedondo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintVertical_bias="0.0">
+
         <GridLayout
             android:id="@+id/contenedorLS"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:alignmentMode="alignBounds"
             android:columnCount="8"
-            android:rowCount="40">
-        </GridLayout>
+            android:rowCount="40"></GridLayout>
     </ScrollView>
 
     //second scroll
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="480dp"
+        android:layout_marginTop="420dp"
         android:background="@drawable/borderedondo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/scrollLS"
@@ -79,12 +79,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:orientation="vertical">
+
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardViewSobreNosotros"
                     android:layout_width="100dp"
@@ -120,6 +122,7 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/keyboardparentlayout"
                 android:layout_width="match_parent"
@@ -127,6 +130,7 @@
                 android:layout_marginTop="5dp"
                 android:orientation="vertical"
                 android:visibility="visible">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -153,63 +157,63 @@
                             android:layout_width="40dp"
                             android:layout_height="30dp"
                             android:src="@drawable/dos"
-                            android:tag="2"  />
+                            android:tag="2" />
 
                         <ImageView
                             android:id="@+id/tres"
                             android:layout_width="40dp"
                             android:layout_height="30dp"
                             android:src="@drawable/tres"
-                            android:tag="3"  />
+                            android:tag="3" />
 
                         <ImageView
                             android:id="@+id/cuatro"
                             android:layout_width="40dp"
                             android:layout_height="30dp"
                             android:src="@drawable/cuatro"
-                            android:tag="4"  />
+                            android:tag="4" />
 
                         <ImageView
                             android:id="@+id/cinco"
                             android:layout_width="40dp"
                             android:layout_height="30dp"
                             android:src="@drawable/cinco"
-                            android:tag="5"  />
+                            android:tag="5" />
 
                         <ImageView
                             android:id="@+id/seis"
                             android:layout_width="40dp"
                             android:layout_height="30dp"
                             android:src="@drawable/seis"
-                            android:tag="6"  />
+                            android:tag="6" />
 
                         <ImageView
                             android:id="@+id/siete"
                             android:layout_width="40dp"
                             android:layout_height="30dp"
                             android:src="@drawable/siete"
-                            android:tag="7"  />
+                            android:tag="7" />
 
                         <ImageView
                             android:id="@+id/ocho"
                             android:layout_width="40dp"
                             android:layout_height="30dp"
                             android:src="@drawable/ocho"
-                            android:tag="8"  />
+                            android:tag="8" />
 
                         <ImageView
                             android:id="@+id/nueve"
                             android:layout_width="40dp"
                             android:layout_height="30dp"
                             android:src="@drawable/nueve"
-                            android:tag="9"  />
+                            android:tag="9" />
 
                         <ImageView
                             android:id="@+id/cero"
                             android:layout_width="40dp"
                             android:layout_height="30dp"
                             android:src="@drawable/cero"
-                            android:tag="0"  />
+                            android:tag="0" />
                     </LinearLayout>
                     //end numeros
 
@@ -430,10 +434,10 @@
                             android:id="@+id/back"
                             android:layout_width="70dp"
                             android:layout_height="50dp"
-                            android:textSize="20sp"
-                            android:text="🧹"
                             android:background="@drawable/borderedondo"
-                            android:onClick="delete" />
+                            android:onClick="delete"
+                            android:text="🧹"
+                            android:textSize="20sp" />
                         <!--                            android:src="@drawable/ic_backspace_black_24dp"-->
 
 
@@ -446,31 +450,30 @@
                         android:gravity="center"
                         android:orientation="horizontal">
 
-<!--                        <Button-->
-<!--                            android:id="@+id/comma"-->
-<!--                            android:layout_width="35dp"-->
-<!--                            android:layout_height="40dp"-->
-<!--                            android:background="@drawable/borderedondo"-->
-<!--                            android:text=","-->
-<!--                            android:textColor="@color/white" />-->
+                        <!--                        <Button-->
+                        <!--                            android:id="@+id/comma"-->
+                        <!--                            android:layout_width="35dp"-->
+                        <!--                            android:layout_height="40dp"-->
+                        <!--                            android:background="@drawable/borderedondo"-->
+                        <!--                            android:text=","-->
+                        <!--                            android:textColor="@color/white" />-->
 
                         <Button
                             android:id="@+id/spacebar"
-                            android:onClick="space"
                             android:layout_width="150dp"
                             android:layout_height="50dp"
                             android:background="@drawable/borderedondo"
+                            android:onClick="space"
                             android:tag=" "
-                            android:text="______"
-                            />
+                            android:text="______" />
 
-<!--                        <Button-->
-<!--                            android:id="@+id/dot"-->
-<!--                            android:layout_width="35dp"-->
-<!--                            android:layout_height="40dp"-->
-<!--                            android:background="@drawable/borderedondo"-->
-<!--                            android:text="."-->
-<!--                            android:textColor="@color/white" />-->
+                        <!--                        <Button-->
+                        <!--                            android:id="@+id/dot"-->
+                        <!--                            android:layout_width="35dp"-->
+                        <!--                            android:layout_height="40dp"-->
+                        <!--                            android:background="@drawable/borderedondo"-->
+                        <!--                            android:text="."-->
+                        <!--                            android:textColor="@color/white" />-->
                     </LinearLayout>
                     //end letters
                 </LinearLayout>
