--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -11,9 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:background="@drawable/ic_wave"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"></View>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></View>
 
     <TextView
         android:id="@+id/textView2"
@@ -33,7 +33,7 @@
         android:id="@+id/imageView"
         android:layout_width="80dp"
         android:layout_height="90dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="60dp"
         android:src="@drawable/logoucv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -118,6 +118,19 @@
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
+    <Button
+        android:id="@+id/sharebtn"
+        android:layout_width="300dp"
+        android:layout_height="70dp"
+        android:text="Compartir Aplicación"
+        android:textSize="14sp"
+        android:textColor="@color/white"
+        android:background="@drawable/borderedondo"
+        android:drawableBottom="@drawable/ic_share"
+        android:layout_marginTop="280dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
