--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/lyPrincipal"
     tools:context=".MainActivity">
 
     <include
@@ -13,6 +15,7 @@
         tools:layout_editor_absoluteY="48dp" />
 
     <View
+        android:id="@+id/view4"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_marginTop="56dp"
@@ -25,11 +28,11 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/oldsansblack"
         android:text="💫️TRADUCTOR S&amp;M💫️"
         android:textColor="@color/color_title"
         android:textSize="20sp"
-        android:fontFamily="@font/oldsansblack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,14 +45,15 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
 
+
     <androidx.cardview.widget.CardView
-        android:onClick="viewClicked"
         android:id="@+id/cardViewTraductorVoz"
         android:layout_width="175dp"
         android:layout_height="150dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:onClick="viewClicked"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="8dp"
         app:cardElevation="14dp"
@@ -57,14 +61,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2">
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal|center_vertical"
-            android:gravity="center"
-            android:orientation="vertical"
             android:focusable="false"
-            >
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:layout_width="75dp"
@@ -75,53 +79,53 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/oldsansblack"
-                android:textColor="@color/color_texto"
                 android:text="Traducir con voz"
+                android:textColor="@color/color_texto"
                 android:textSize="20sp" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewAbecedario"
-        android:onClick="viewClicked"
-        app:cardElevation="14dp"
-        app:cardCornerRadius="8dp"
-        android:layout_width="175dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="8dp"
-        app:cardBackgroundColor="@color/white"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/cardViewTraductorVoz"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.324"
-        app:layout_constraintStart_toEndOf="@+id/cardViewTraductorVoz"
-        app:layout_constraintTop_toTopOf="@+id/cardViewTraductorVoz"
-        app:layout_constraintVertical_bias="0.0" >
+            android:id="@+id/cardViewAbecedario"
+            android:layout_width="175dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="24dp"
+            android:onClick="viewClicked"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="14dp"
+            app:layout_constraintBottom_toBottomOf="@+id/cardViewTraductorVoz"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.324"
+            app:layout_constraintStart_toEndOf="@+id/cardViewTraductorVoz"
+            app:layout_constraintTop_toTopOf="@+id/cardViewTraductorVoz"
+            app:layout_constraintVertical_bias="0.0">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:gravity="center"
-            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:src="@drawable/order_alphabetical_ascending" />
+                <ImageView
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:src="@drawable/order_alphabetical_ascending" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/oldsansblack"
-                android:textColor="@color/color_texto"
-                android:text="Abecedario"
-                android:textSize="20sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/oldsansblack"
+                    android:text="Abecedario"
+                    android:textColor="@color/color_texto"
+                    android:textSize="20sp" />
 
 
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewTeclado"
@@ -162,41 +166,42 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewNumeros"
-        android:layout_width="175dp"
-        android:layout_height="150dp"
-        android:onClick="viewClicked"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="14dp"
-        app:layout_constraintBottom_toBottomOf="@+id/cardViewTeclado"
-        app:layout_constraintEnd_toEndOf="@+id/cardViewAbecedario"
-        app:layout_constraintStart_toEndOf="@+id/cardViewTeclado"
-        app:layout_constraintTop_toTopOf="@+id/cardViewTeclado">
+            android:id="@+id/cardViewNumeros"
+            android:layout_width="175dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="16dp"
+            android:onClick="viewClicked"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="14dp"
+            app:layout_constraintBottom_toBottomOf="@+id/cardViewTeclado"
+            app:layout_constraintEnd_toEndOf="@+id/cardViewAbecedario"
+            app:layout_constraintStart_toEndOf="@+id/cardViewTeclado"
+            app:layout_constraintTop_toTopOf="@+id/cardViewTeclado">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:gravity="center"
-            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:src="@drawable/numeros" />
+                <ImageView
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:src="@drawable/numeros" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/oldsansblack"
-                android:text="Números"
-                android:textColor="@color/color_texto"
-                android:textSize="20sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/oldsansblack"
+                    android:text="Números"
+                    android:textColor="@color/color_texto"
+                    android:textSize="20sp" />
 
 
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewSobreNosotros"
@@ -207,7 +212,7 @@
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="8dp"
         app:cardElevation="14dp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintEnd_toEndOf="@+id/cardViewTeclado"
         app:layout_constraintStart_toStartOf="@+id/cardViewTeclado"
         app:layout_constraintTop_toBottomOf="@+id/cardViewTeclado">
 
@@ -234,6 +239,18 @@
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/bannerPrincipal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-3408207304248121/5317293716"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 
 
